correção de alguns bugs e criação da função e teste: find-note-by-id
